--- a/user-service.yml
+++ b/user-service.yml
@@ -2,15 +2,19 @@ server:
   port: 8081
 
 spring:
-
+  application:
+    name: user-service
   datasource:
     url: jdbc:mysql://localhost:3306/userdb
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    username: root
+    password: 12345
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
 
-  application:
-    name: Config-server
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
