--- a/auth-service.yml
+++ b/auth-service.yml
@@ -16,4 +16,8 @@ spring:
           starttls:
             enable: true
 
- 
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
