--- a/auth-service.yml
+++ b/auth-service.yml
@@ -4,6 +4,16 @@ server:
 spring:
   application:
     name: auth-service
+  datasource:
+    url: jdbc:mysql://localhost:3306/userdb
+    username: root
+    password: 12345
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
   mail:
     host: smtp.gmail.com
     port: 587
@@ -15,7 +25,6 @@ spring:
           auth: true
           starttls:
             enable: true
-
 
 eureka:
   client:
